--- a/task-mgmt/common/pom.xml
+++ b/task-mgmt/common/pom.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>vertx2</groupId>
+    <groupId>vertx</groupId>
     <artifactId>task-mgmt-common</artifactId>
-    <version>0.0.24-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
-    <name>SXA Async Task Queue Common Lib</name>
+    <name>Async Task Queue Common Lib</name>
     <properties>
         <!--Dependency versions-->
-        <vertx.version>2.1RC2</vertx.version>
-        <vertx.mod.redis.version>1.1.4</vertx.mod.redis.version>
-        <vertx.testtools.version>2.0.3-final</vertx.testtools.version>
+        <vertx.version>3.4.1</vertx.version>
         <junit.version>4.11</junit.version>
     </properties>
     <dependencies>
@@ -37,19 +35,13 @@
         </dependency>
         <dependency>
             <groupId>io.vertx</groupId>
-            <artifactId>vertx-platform</artifactId>
+            <artifactId>vertx-redis-client</artifactId>
             <version>${vertx.version}</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>io.vertx</groupId>
-            <artifactId>mod-redis-client</artifactId>
-            <version>${vertx.mod.redis.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>vertx2</groupId>
+            <groupId>vertx</groupId>
             <artifactId>vertx-common</artifactId>
-            <version>0.0.24-SNAPSHOT</version>
+            <version>1.0.0</version>
         </dependency>
         <dependency>
             <groupId>javax</groupId>
@@ -66,8 +58,8 @@
                 <version>3.1</version>
                 <configuration>
                     <encoding>UTF-8</encoding>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
         </plugins>
