--- a/task-mgmt/pom.xml
+++ b/task-mgmt/pom.xml
@@ -8,9 +8,9 @@
         <version>0.0.4</version>
     </parent-->
 
-    <groupId>vertx2</groupId>
-        <artifactId>sxa-task-mgmt</artifactId>
-        <version>0.0.24-SNAPSHOT</version>
+    <groupId>vertx</groupId>
+        <artifactId>task-mgmt</artifactId>
+        <version>1.0.0</version>
     <packaging>pom</packaging>
 
     <modules>
