--- a/acs-common/pom.xml
+++ b/acs-common/pom.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>vertx2</groupId>
+    <groupId>vertx</groupId>
     <artifactId>acs-common</artifactId>
-    <version>0.0.24-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
-    <name>SXA CC ACS Common Libs/Utils</name>
+    <name>ACS Common Libs/Utils</name>
     <properties>
         <!--Dependency versions-->
         <vertx.version>3.4.1</vertx.version>
-        <vertx.mod.redis.version>1.1.4</vertx.mod.redis.version>
-        <vertx.testtools.version>2.0.3-final</vertx.testtools.version>
         <junit.version>4.11</junit.version>
     </properties>
     <dependencies>
@@ -21,19 +19,19 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>vertx2</groupId>
+            <groupId>vertx</groupId>
             <artifactId>vertx-common</artifactId>
-            <version>0.0.24-SNAPSHOT</version>
+            <version>1.0.0</version>
         </dependency>
         <dependency>
-            <groupId>vertx2</groupId>
+            <groupId>vertx</groupId>
             <artifactId>task-mgmt-common</artifactId>
-            <version>0.0.24-SNAPSHOT</version>
+            <version>1.0.0</version>
         </dependency>
         <dependency>
-            <groupId>vertx2</groupId>
+            <groupId>vertx</groupId>
             <artifactId>cwmp-schemas</artifactId>
-            <version>0.0.24-SNAPSHOT</version>
+            <version>1.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
@@ -55,8 +53,8 @@
                 <version>3.1</version>
                 <configuration>
                     <encoding>UTF-8</encoding>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
         </plugins>
