--- a/cwmp-schemas/pom.xml
+++ b/cwmp-schemas/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>vertx2</groupId>
+    <groupId>vertx</groupId>
     <artifactId>cwmp-schemas</artifactId>
-    <version>0.0.24-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
     <name>CWMP Schemas</name>
 
