--- a/cpe-server/pom.xml
+++ b/cpe-server/pom.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>vertx2</groupId>
+  <groupId>vertx</groupId>
   <artifactId>cpe-server</artifactId>
   <packaging>jar</packaging>
-  <version>0.0.24-SNAPSHOT</version>
-  <name>SXA CC ACS CPE Server (Vert.X Based)</name>
+  <version>1.0.0</version>
+  <name>ACS CPE Server (Vert.X Based)</name>
   <url>http://maven.apache.org</url>
   <parent>
     <groupId>org.sonatype.oss</groupId>
@@ -65,11 +65,6 @@
     <!--Vertx provided dependencies-->
     <dependency>
       <groupId>io.vertx</groupId>
-      <artifactId>mod-redis-client</artifactId>
-      <version>1.1.4</version>
-    </dependency>
-    <dependency>
-      <groupId>io.vertx</groupId>
       <artifactId>vertx-core</artifactId>
       <version>${vertx.version}</version>
       <scope>provided</scope>
@@ -92,12 +87,6 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
-    <dependency>
-      <groupId>io.vertx</groupId>
-      <artifactId>testtools</artifactId>
-      <version>${vertx.testtools.version}</version>
-      <scope>test</scope>
-    </dependency>
     <!-- Add any other dependencies that you want packaged into your module (in the lib dir) here
     as 'compile' dependencies. Here is an example
     <dependency><groupId>org.hamcrest</groupId><artifactId>hamcrest-core</artifactId><version>1.3</version><scope>compile</scope></dependency>-->
@@ -105,14 +94,11 @@
   <build>
     <plugins>
       <!-- The vert.x Maven plugin -->
+      <!--
       <plugin>
         <groupId>io.vertx</groupId>
         <artifactId>vertx-maven-plugin</artifactId>
         <version>${maven.vertx.plugin.version}</version>
-        <!--
-        You can specify extra config to the plugin as required here
-        <configuration><configFile>/path/to/MyVerticle.conf</configFile><instances>1</instances><classpath>src/main/resources/:src/test/resources/:target/classes/:target/test-classes/</classpath></configuration>-->
-        <!-- Make sure that the plugin uses the vert.x versions from this pom.xml not from its own pom.xml -->
         <dependencies>
           <dependency>
             <groupId>io.vertx</groupId>
@@ -135,6 +121,7 @@
           </execution>
         </executions>
       </plugin>
+      -->
       <!-- Other plugins required by the build -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
