--- a/cpe-sim/pom.xml
+++ b/cpe-sim/pom.xml
@@ -3,11 +3,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>vertx2</groupId>
+  <groupId>vertx</groupId>
   <artifactId>cpe-sim</artifactId>
   <packaging>jar</packaging>
-  <version>0.0.24-SNAPSHOT</version>
-  <name>SXA CC CPE Simulator</name>
+  <version>1.0.0</version>
+  <name>CPE Simulator</name>
   <url>http://maven.apache.org</url>
 
   <parent>
@@ -36,8 +36,7 @@
     <mods.directory>target/mods</mods.directory>
 
     <!--Dependency versions-->
-    <vertx.version>2.1RC2</vertx.version>
-    <vertx.testtools.version>2.0.3-final</vertx.testtools.version>
+    <vertx.version>3.4.1</vertx.version>
     <junit.version>4.11</junit.version>
 
     <!--Plugin versions-->
@@ -62,25 +61,19 @@
   <dependencies>
     <!--Calix provided dependencies-->
     <dependency>
-      <groupId>vertx2</groupId>
+      <groupId>vertx</groupId>
       <artifactId>acs-common</artifactId>
-      <version>0.0.24-SNAPSHOT</version>
+      <version>1.0.0</version>
     </dependency>
     <!--Vertx provided dependencies-->
     <dependency>
       <groupId>io.vertx</groupId>
-      <artifactId>mod-redis-client</artifactId>
-      <version>1.1.3</version>
+      <artifactId>vertx-redis-client</artifactId>
+      <version>${vertx.version}</version>
     </dependency>
       <dependency>
       <groupId>io.vertx</groupId>
       <artifactId>vertx-core</artifactId>
-      <version>${vertx.version}</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>io.vertx</groupId>
-      <artifactId>vertx-platform</artifactId>
       <version>${vertx.version}</version>
       <scope>provided</scope>
     </dependency>
@@ -95,12 +88,6 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>io.vertx</groupId>
-      <artifactId>testtools</artifactId>
-      <version>${vertx.testtools.version}</version>
       <scope>test</scope>
     </dependency>
 
@@ -119,7 +106,6 @@
   <build>
     <plugins>
 
-      <!-- The vert.x Maven plugin -->
       <plugin>
         <groupId>io.vertx</groupId>
         <artifactId>vertx-maven-plugin</artifactId>
@@ -136,11 +122,6 @@
         <dependencies>
           <dependency>
             <groupId>io.vertx</groupId>
-            <artifactId>vertx-platform</artifactId>
-            <version>${vertx.version}</version>
-          </dependency>
-          <dependency>
-            <groupId>io.vertx</groupId>
             <artifactId>vertx-core</artifactId>
             <version>${vertx.version}</version>
           </dependency>
@@ -150,7 +131,7 @@
             <version>${vertx.version}</version>
           </dependency>
         </dependencies>
-        <executions>
+        <!--executions>
           <execution>
             <id>PullInDeps</id>
             <phase>prepare-package</phase>
@@ -158,7 +139,7 @@
               <goal>pullInDeps</goal>
             </goals>
           </execution>
-        </executions>
+        </executions-->
       </plugin>
 
       <!-- Other plugins required by the build -->
@@ -167,8 +148,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>${maven.compiler.plugin.version}</version>
         <configuration>
-          <source>1.7</source>
-          <target>1.7</target>
+          <source>1.8</source>
+          <target>1.8</target>
         </configuration>
       </plugin>
       <plugin>
@@ -302,14 +283,6 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-report-plugin</artifactId>
         <version>${maven.surefire.report.plugin.version}</version>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <version>${maven.javadoc.plugin.version}</version>
-        <configuration>
-          <aggregate>true</aggregate>
-        </configuration>
       </plugin>
     </plugins>
   </reporting>
