--- a/acs-server/pom.xml
+++ b/acs-server/pom.xml
@@ -3,11 +3,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>vertx2</groupId>
+  <groupId>vertx</groupId>
   <artifactId>acs-server</artifactId>
   <packaging>jar</packaging>
-  <version>0.0.24-SNAPSHOT</version>
-  <name>SXA CC ACS Server</name>
+  <version>1.0.0</version>
+  <name>ACS Server</name>
 
   <properties>
     <timestamp>${maven.build.timestamp}</timestamp>
@@ -31,7 +31,7 @@
     <mods.directory>target/mods</mods.directory>
 
     <!--Dependency versions-->
-    <vertx.version>2.1RC2</vertx.version>
+    <vertx.version>3.4.1</vertx.version>
     <vertx.testtools.version>2.0.3-final</vertx.testtools.version>
     <junit.version>4.11</junit.version>
 
@@ -57,20 +57,14 @@
   <dependencies>
     <!--Calix provided dependencies-->
     <dependency>
-      <groupId>vertx2</groupId>
+      <groupId>vertx</groupId>
       <artifactId>acs-common</artifactId>
-      <version>0.0.24-SNAPSHOT</version>
+      <version>1.0.0</version>
     </dependency>
     <!--Vertx provided dependencies-->
     <dependency>
       <groupId>io.vertx</groupId>
       <artifactId>vertx-core</artifactId>
-      <version>${vertx.version}</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>io.vertx</groupId>
-      <artifactId>vertx-platform</artifactId>
       <version>${vertx.version}</version>
       <scope>provided</scope>
     </dependency>
@@ -121,25 +115,13 @@
       </plugin>
 
       <!-- The vert.x Maven plugin -->
-      <plugin>
+      <!--plugin>
         <groupId>io.vertx</groupId>
         <artifactId>vertx-maven-plugin</artifactId>
         <version>${maven.vertx.plugin.version}</version>
-        <!--
-        You can specify extra config to the plugin as required here
-        <configuration>
-           <configFile>/path/to/MyVerticle.conf</configFile>
-           <instances>1</instances>
-           <classpath>src/main/resources/:src/test/resources/:target/classes/:target/test-classes/</classpath>
-        </configuration>
-        -->
-        <!-- Make sure that the plugin uses the vert.x versions from this pom.xml not from its own pom.xml -->
+
         <dependencies>
-          <dependency>
-            <groupId>io.vertx</groupId>
-            <artifactId>vertx-platform</artifactId>
-            <version>${vertx.version}</version>
-          </dependency>
+
           <dependency>
             <groupId>io.vertx</groupId>
             <artifactId>vertx-core</artifactId>
@@ -170,7 +152,7 @@
             </goals>
           </execution>
         </executions>
-      </plugin>
+      </plugin-->
 
       <!-- Other plugins required by the build -->
       <plugin>
@@ -178,8 +160,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>${maven.compiler.plugin.version}</version>
         <configuration>
-          <source>1.7</source>
-          <target>1.7</target>
+          <source>1.8</source>
+          <target>1.8</target>
         </configuration>
       </plugin>
       <plugin>
